--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <div class="content">
     <div style="display:flex; align-items:center; justify-content:center; gap:14px; margin-top:12px;">
       <img src="./xslim_files/figs/rocket.png" alt="X-Slim rocket" style="height:72px; filter: drop-shadow(0 0 10px rgba(255,255,255,0.45));">
-      <h1 style="margin:0; font-family:'Georgia','Times New Roman',serif; font-weight:800; letter-spacing:2px; text-shadow:0 0 12px rgba(255,255,255,0.4);">
+      <h1 style="margin:0; font-family:'Georgia','Times New Roman',serif; font-weight:800; letter-spacing:1px; text-shadow:0 0 12px rgba(255,255,255,0.4);">
         <span style="color:#fd2554">X</span>
         <span style="color:#fff06a">-</span>
         <span style="color:#f1853c">S</span>
@@ -39,7 +39,7 @@
         <span style="color:#ff47e0">m</span>
       </h1>
     </div>
-    <p style="text-align: center; font-family:'Georgia','Times New Roman',serif; font-weight: 700; font-size: 1.2em; margin: 8px 0 12px;">No Cache Left Idle: Accelerating Diffusion Model via Extreme-Slimming Caching</p>
+    <h1><strong>No Cache Left Idle: Accelerating Diffusion Model via Extreme-Slimming Caching</strong></h1>
     <p id="authors" style="text-align: center; font-family:'Times New Roman','Georgia',serif; font-weight: 700; margin: 4px 0 6px; font-size: 18px;"><b>Tingyan Wen<sup>1*</sup></b>, <b>Haoyu Li<sup>1*</sup></b>, <b>Yihuang Chen<sup>2&dagger;</sup></b>, <b>Xing Zhou<sup>2</sup></b>, <b>Lifei Zhu<sup>2</sup></b>, <b>XueQian Wang<sup>1&dagger;</sup></b></p>
     <p id="authors" style="text-align: center; font-family:'Times New Roman','Georgia',serif; margin: 4px 0 4px; font-size: 16px;"> <b><sup>1</sup> Tsinghua University</b> &nbsp;&nbsp; <b><sup>2</sup> Central Media Technology Institute, Huawei</b></p>
     <p style="text-align: center; font-family:'Times New Roman','Georgia',serif; margin: 4px 0 10px; font-size: 15px; font-weight: 600;">(<sup>*</sup> Equal Contribution &nbsp; <sup>&dagger;</sup> Corresponding Author)</p>
