--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
     <div class="content">
     <div style="display:flex; align-items:center; justify-content:center; gap:14px; margin-top:12px;">
       <img src="./xslim_files/figs/rocket.png" alt="X-Slim rocket" style="height:72px; filter: drop-shadow(0 0 10px rgba(255,255,255,0.45));">
-      <h1 style="margin:0; font-family:'Georgia','Times New Roman',serif; font-weight:800; letter-spacing:1px; text-shadow:0 0 12px rgba(255,255,255,0.4);">
+      <h1 style="margin:0; font-family:'Georgia','Times New Roman',serif; font-weight:800; letter-spacing:0.8px; text-shadow:0 0 12px rgba(255,255,255,0.4);">
         <span style="color:#fd2554">X</span>
-        <span style="color:#fff06a">-</span>
-        <span style="color:#f1853c">S</span>
-        <span style="color:#3df364">l</span>
-        <span style="color:#69eeff">i</span>
-        <span style="color:#ff47e0">m</span>
+        <span style="color:#fce72b">-</span>
+        <span style="color:#ff7e29">S</span>
+        <span style="color:#02ff38">l</span>
+        <span style="color:#3585fc">i</span>
+        <span style="color:#fd30b9">m</span>
       </h1>
     </div>
     <h1><strong>No Cache Left Idle: Accelerating Diffusion Model via Extreme-Slimming Caching</strong></h1>
