--- a/index.html
+++ b/index.html
@@ -3,6 +3,36 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="title"
+      content="X-Slim: No Cache Left Idle: Accelerating Diffusion Model via Extreme-Slimming Caching">
+
+  <meta name="description"
+        content="X-Slim is a training-free cache-based accelerator for diffusion models. X-Slim jointly exploits redundancy across temporal, structural, and spatial dimensions, achieving the best speed–quality trade-off for image and video generation.">
+
+  <meta name="keywords"
+        content="X-Slim, diffusion models, diffusion acceleration, cache-based acceleration, image generation, video generation, inference optimization, computer vision">
+
+  <meta name="author"
+        content="Tingyan Wen, Haoyu Li, Yihuang Chen, Xing Zhou, Lifei Zhu, XueQian Wang">
+
+  <meta name="robots" content="index, follow">
+  <meta name="language" content="English">
+
+  <!-- Open Graph / Social Media -->
+  <meta property="og:type" content="article">
+  <meta property="og:site_name" content="X-Slim Project Page">
+  <meta property="og:title"
+        content="X-Slim: No Cache Left Idle: Accelerating Diffusion Model via Extreme-Slimming Caching">
+  <meta property="og:description"
+        content="A training-free cache-based method that accelerates diffusion model inference for image and video generation with negligible quality loss.">
+  <meta property="og:url"
+        content="https://thu-accdiff.github.io/xslim-page/">
+  <meta property="og:image"
+        content="https://thu-accdiff.github.io/xslim-page/xslim_files/figs/fig_display.png">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt"
+        content="X-Slim qualitative results">
 
   <!-- Preconnect for performance -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,7 +43,7 @@
 
 
   <!-- TODO: Replace with your paper title and authors -->
-  <title>X-Slim</title>
+  <title>X-Slim: No Cache Left Idle -- Accelerating Diffusion Model via Extreme-Slimming Caching</title>
   
   <!-- Favicon and App Icons -->
   <link rel="icon" type="image/x-icon" href="xslim_files/figs/rocket.png">
