--- a/index.html
+++ b/index.html
@@ -141,11 +141,11 @@
 
             <!-- Links -->
             <div class="buttons is-centered btn-gap" style="margin-top:14px;">
-              <a class="button is-dark is-rounded" href="./No_Cache_Left_Idle__Accelerating_diffusion_model_via_Extreme_Slimming_Caching.pdf" target="_blank">
+              <a class="button is-dark is-rounded" href="https://arxiv.org/abs/2512.12604" target="_blank">
                 <span class="icon">
                   <i class="ai ai-arxiv"></i>
                 </span>
-                <span>Paper (TODO)</span>
+                <span>arXiv</span>
               </a>
               <a class="button is-dark is-rounded" href="https://github.com/THU-AccDiff/xslim/" target="_blank" rel="noopener">
                 <span class="icon">
@@ -312,11 +312,12 @@
       <h2 class="title is-3 section-title">📚 BibTeX</h2>
       <div class="content">
         <p>If you find this work helpful, please cite:</p>
-<pre><code>@article{xslim2026,
+<pre><code>@article{xslimcache2025,
   title={No Cache Left Idle: Accelerating Diffusion Model via Extreme-Slimming Caching},
-  author={Anonymous},
-  journal={CVPR Submission},
-  year={2026}
+  author={Wen, Tingyan and Li, Haoyu and Chen, Yihuang and Zhou, Xing and Zhu, Lifei and Wang, XueQian},
+  journal={arXiv preprint arXiv:2512.12604},
+  year={2025}
+}
 }</code></pre>
       </div>
     </div>
@@ -327,7 +328,7 @@
     <div class="container is-max-desktop">
       <div class="content has-text-centered">
           <p>
-            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> which was adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
+            This page was built using the <a href="https://github.com/eliahuhorwitz/Academic-project-page-template" target="_blank">Academic Project Page Template</a> which was adopted from the <a href="https://nerfies.github.io" target="_blank">Nerfies</a> project page.
             You are free to borrow the source code of this website, we just ask that you link back to this page in the footer. <br> This website is licensed under a <a rel="license"  href="http://creativecommons.org/licenses/by-sa/4.0/" target="_blank">Creative
             Commons Attribution-ShareAlike 4.0 International License</a>.
           </p>
