--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
   journal={arXiv preprint arXiv:2512.12604},
   year={2025}
 }
-}</code></pre>
+</code></pre>
       </div>
     </div>
   </section>
